<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ThemeChangeActivity">


    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/actionBarColor"
                app:title="@string/title_color"
                app:titleTextColor="@color/colorActionBarText" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/theme_light"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/card_background"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp">

        <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ligh_icon" />

    </com.google.android.material.card.MaterialCardView>

            <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/theme_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/theme_dark"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/card_background"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="1dp">

                <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/dark_icon" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/theme_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/theme_dark" />

    <View
            android:id="@+id/_divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:background="@color/actionBarColor"
            app:layout_constraintBottom_toTopOf="@+id/theme_label"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/theme_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/theme_select_label"
            android:textColor="@color/colorTextPost"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/theme_light"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>